--- a/package.json
+++ b/package.json
@@ -14,28 +14,22 @@
     "@heroicons/react": "^2.2.0",
     "@next/env": "^15.1.5",
     "@octokit/types": "^13.7.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@tanstack/react-query": "5.63.0",
     "@tanstack/react-query-devtools": "5.63.0",
-    "babel-plugin-react-compiler": "19.0.0-beta-63e3235-20250105",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "eslint-plugin-format": "1.0.1",
     "eslint-plugin-react-refresh": "0.4.18",
-    "immer": "10.1.1",
     "lucide-react": "0.472.0",
     "next": "15.1.5",
     "octokit": "^4.1.0",
     "production": "link:@tanstack/react-query-devtools/production",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "sonner": "^1.7.2",
     "tailwind-merge": "2.6.0",
-    "tailwindcss-animate": "1.0.7",
-    "uuid": "11.0.5",
-    "zustand": "5.0.3"
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@antfu/eslint-config": "3.13.0",
